@@ -28,18 +28,16 @@ public class NumConversionSmall implements ParamCodec {
     @Override
     public byte[] encode(String value, Object... objects) {
         //默认不做小数点保留
-        double result = 1.0;
         int resultInt = 1;
         byte[] bytes = null;
         if (objects != null&&objects.length!=0) {
             if (!ObjectUtil.isEmpty(objects[0])){
                 if(value.contains(".")){
-                    result = Double.valueOf(value) * Double.valueOf(objects[0].toString());
-                    bytes  = ByteUtils.objToBytes(result,Integer.valueOf(objects[1].toString()),true);
+                    resultInt = new Double(Double.valueOf(value) * Double.valueOf(objects[0].toString())).intValue();
                 }else{
                     resultInt = Integer.valueOf(value) * Integer.valueOf(objects[0].toString());
-                    bytes = ByteUtils.objToBytes(resultInt, Unpooled.LITTLE_ENDIAN,Unpooled::copyInt);
                 }
+                bytes = ByteUtils.objToBytes(resultInt, Unpooled.LITTLE_ENDIAN,Unpooled::copyInt);
             }
         }
         return bytes;
